# mathtest

./: .gitignore  AGENTS.md  README.md  pyproject.toml
documents/: MVP.md  PRD.md  SDD.md
src/mathtest/: __init__.py  coordinator.py  interface.py  main.py  registry.py
src/mathtest/output/: __init__.py  pdf.py
src/mathtest/plugins/: __init__.py  addition.py  clock.py  division.py  multiplication.py  subtraction.py
tests/: __init__.py  test_cli.py  test_coordinator.py  test_output_pdf.py  test_plugins.py  test_registry.py
tests/plugins/: __init__.py  conftest.py  test_addition.py  test_clock.py  test_division.py  test_multiplication.py  test_subtraction.py
