[project]
name = "mathtest"
version = "0.1.0"
description = "Quickly create simple math tests like in elementary school."
readme = "README.md"
authors = [
    { name = "Clayton", email = "cblack@claytontblack.com" }
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12.5",
    "pyyaml>=6.0.2",
    "svgwrite>=1.4.3",
    "reportlab>=4.2.2",
    "pydantic>=2.8.2",
    "setuptools>=70.0.0",
]

[project.scripts]
mathtest = "mathtest.main:app"

[project.entry-points."mathtest.plugins"]
addition = "mathtest.plugins.addition:AdditionPlugin"
subtraction = "mathtest.plugins.subtraction:SubtractionPlugin"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
