[project]
name = "mathtest"
version = "0.1.0"
description = "Quickly create simple math tests like in elementary school."
readme = "README.md"
authors = [
    { name = "Clayton", email = "cblack@claytontblack.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.4",
    "svgwrite>=1.4.3",
    "typer>=0.20.0",
]

[project.scripts]
mathtest = "mathtest:main"

[project.entry-points."mathtest.plugins"]
addition = "mathtest.plugins.addition:AdditionPlugin"
subtraction = "mathtest.plugins.subtraction:SubtractionPlugin"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
